--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="indexpage.css">
 		<title>狗蛙世界</title>
 	</head>
 	<body>
-		<p>website by dinghx</p>
+		<h1 id="title1">狗蛙世界</h1>
+		<p id="designer">dinghx制作该网站</p>
+		
 	</body>
 </html>
