--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>狗蛙世界</title>
 	</head>
 	<script>
+	setInterval(function(){document.getElementById("firstgw").src="./gw/original.png";},5000);
 	touchtimes = 0;
 	function addtimes() {
 		touchtimes += 1;
@@ -19,6 +20,6 @@
 		<p id="designer">dinghx制作该网站</p>
 		<br>
 		<img id="firstgw" src="./gw/original.png" alt="狗蛙走丢了。。。" onclick="addtimes()">
-		<p>摸摸它</p>
+		<h3>摸摸它</h3>
 	</body>
 </html>
