--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="indexpage.css">
 		<title>狗蛙世界</title>
+		<script src=jquery.js"></script>
 	</head>
 	<script>
 	setInterval(function(){document.getElementById("firstgw").src="./gw/original.png";},5000);
