--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<script src=jquery.js"></script>
+		<script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="indexpage.css">
 		<title>狗蛙世界</title>
-		<script src=jquery.js"></script>
 	</head>
 	<script>
-	setInterval(function(){document.getElementById("firstgw").src="./gw/original.png";},5000);
-	setInterval(function(){document.getElementById("bread").src="./gw/bread.png";isEatBread=false},10000);
 	touchtimes = 0;
 	isEatBread = false;
+	setInterval(function(){document.getElementById("firstgw").src="./gw/original.png";},5000);
+	setInterval(function(){document.getElementById("bread").src="./gw/bread.png";isEatBread=false;touchtimes=0},10000);
 	function addtimes() {
 		touchtimes += 1;
 		if(touchtimes > 3 && !isEatBread) {
@@ -29,7 +31,7 @@
 		<br>
 		<img id="bread" src="./gw/bread.png" alt="面包吃完了。。。" onclick="eatbread()">
 		<img id="firstgw" src="./gw/original.png" alt="狗蛙走丢了。。。" onclick="addtimes()">
-		<button onclick="alert('吃下面包抚摸狗蛙时狗蛙不再生气')">面包是干什么的？</button>
+		<button type="button" class="btn btn-primary btn-lg" onclick="alert('吃下面包抚摸狗蛙时狗蛙不再生气')">面包是干什么的？</button>
 		<h3>摸摸它</h3>
 	</body>
 </html>
