--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 		isEatBread = true;
 		document.getElementById("bread").src="./gw/404.png";
 	}
+	function getcontent() {
+		if (x.value == 'zcz and lcx') {
+			document.getElementById("answer").innerHTML = "新婚快乐!!!";
+		}
+	}
 	</script>
 	<body>
 		<h1 id="title1">狗蛙世界</h1>
@@ -61,5 +66,22 @@
 				</div>
 			</div>
 		</div>
+		<div style="padding: 100px 100px 10px;">
+			<form class="bs-example bs-example-form" role="form">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="input-group">
+							<span class="input-group-btn">
+								<button class="btn btn-default" type="button" onclick="getcontent()">
+									问问狗蛙
+								</button>
+							</span>
+							<input type="text" class="form-control" id="input1"><script>var x=  document.getElementById("input1");</script>
+						</div><!-- /input-group -->
+					</div><!-- /.col-lg-6 -->
+				</div><!-- /.row -->
+			</form>
+		</div>
+		<h1 id="answer"></h1>
 	</body>
 </html>
