--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
 		document.getElementById("bread").src="./gw/404.png";
 	}
 	function getcontent() {
-		if (x.value == 'zcz and lcx') {
-			document.getElementById("answer").innerHTML = "新婚快乐!!!";
+		if (x.value == 'zcz and lcx' || x.value == 'lcx and zcz') {
+			document.getElementById("answerplace").innerHTML='<div class="alert alert-success">新婚快乐！！！</div>';
+		} else if (x.value == 'dhx and zyd' || x.value == 'zyd and dhx') {
+			document.getElementById("answerplace").innerHTML='<div class="alert alert-danger">你在想什么？？？</div>';
+		} else if (x.value == '') {
+			document.getElementById("answerplace").innerHTML='<div class="alert alert-warning">你说什么？</div>';
+		} else {
+			document.getElementById("answerplace").innerHTML='<div class="alert alert-info">狗蛙也不知道呢</div>';
 		}
 	}
 	</script>
@@ -34,6 +40,9 @@
 		<h1 id="title1">狗蛙世界</h1>
 		<p id="designer">dinghx制作该网站</p>
 		<a id="visitgithub" href="https://github.com/CodingDing123/gouwa.github.io/tree/master">访问GitHub页</a>
+		<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#notice">
+			公告
+		</button>
 		<br>
 		<img id="bread" src="./gw/bread.png" alt="面包吃完了。。。" onclick="eatbread()">
 		<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
@@ -66,6 +75,7 @@
 				</div>
 			</div>
 		</div>
+		
 		<div style="padding: 100px 100px 10px;">
 			<form class="bs-example bs-example-form" role="form">
 				<div class="row">
@@ -82,6 +92,40 @@
 				</div><!-- /.row -->
 			</form>
 		</div>
-		<h1 id="answer"></h1>
+		
+		<div id="answerplace">
+		
+		</div>
+		
+		<div class="modal fade" id="notice" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+							&times;
+						</button>
+						<h4 class="modal-title" id="myModalLabel">
+							3.10提交:
+						</h4>
+					</div>
+					<div class="modal-body">
+						<h5>新增功能:</h5>
+						<p>1.“问问狗蛙”功能的答复不再展示在隐藏标题里面</p>
+						<p>2.添加bootstrap警告框来显示狗蛙的回复</p>
+						<p>3.添加狗蛙在无定义情况的默认回答</p>
+						<h5>修复bug</h5>
+						<p>1.修复了狗蛙覆盖回答的问题</p>
+						<h5>已知bug:</h5>
+						<p>1.输入内容后回车会刷新</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">
+							了解
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 	</body>
 </html>
