--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			document.getElementById("answerplace").innerHTML='<div class="alert alert-success">新婚快乐！！！</div>';
 		} else if (x.value == 'dhx and zyd' || x.value == 'zyd and dhx') {
 			document.getElementById("answerplace").innerHTML='<div class="alert alert-danger">你在想什么？？？</div>';
+			document.getElementById("firstgw").src="./gw/angry.png";
 		} else if (x.value == '') {
 			document.getElementById("answerplace").innerHTML='<div class="alert alert-warning">你说什么？</div>';
 		} else {
@@ -105,15 +106,15 @@
 							&times;
 						</button>
 						<h4 class="modal-title" id="myModalLabel">
-							3.10提交:
+							3.11提交:
 						</h4>
 					</div>
 					<div class="modal-body">
-						<h5>新增功能:</h5>
+						<h5>3.10新增功能:</h5>
 						<p>1.“问问狗蛙”功能的答复不再展示在隐藏标题里面</p>
 						<p>2.添加bootstrap警告框来显示狗蛙的回复</p>
 						<p>3.添加狗蛙在无定义情况的默认回答</p>
-						<h5>修复bug</h5>
+						<h5>3.10修复bug</h5>
 						<p>1.修复了狗蛙覆盖回答的问题</p>
 						<h5>已知bug:</h5>
 						<p>1.输入内容后回车会刷新</p>
