--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	function getcontent() {
 		if (x.value == 'zcz and lcx' || x.value == 'lcx and zcz') {
 			document.getElementById("answerplace").innerHTML='<div class="alert alert-success">新婚快乐！！！</div>';
+			document.getElementById("firstgw").src="./gw/girl.png";
 		} else if (x.value == 'dhx and zyd' || x.value == 'zyd and dhx') {
 			document.getElementById("answerplace").innerHTML='<div class="alert alert-danger">你在想什么？？？</div>';
 			document.getElementById("firstgw").src="./gw/angry.png";
