--- a/index.html
+++ b/index.html
@@ -102,6 +102,26 @@
 		
 		</div>
 		
+		<div class="panel-group" id="accordion">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" 
+						   href="#collapseOne">
+							提问规范
+						</a>
+					</h4>
+				</div>
+				<div id="collapseOne" class="panel-collapse collapse in">
+					<div class="panel-body">
+						提问必须是问句
+						提问以“吗”结尾
+						提问中允许出现“什么”疑问词
+						彩蛋除外，彩蛋识别等级高于问句识别等级
+					</div>
+				</div>
+			</div>
+		
 		<div class="modal fade" id="notice" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -120,6 +140,9 @@
 						<p>3.添加狗蛙在无定义情况的默认回答</p>
 						<h5>3.10修复bug</h5>
 						<p>1.修复了狗蛙覆盖回答的问题</p>
+						<h5>3.11新增功能:</h5>
+						<p>1.“问问狗蛙”加入AI功能，可对满足规范的问题进行回答</p>
+						<p>2.“问问狗蛙”的菜单可以改变狗蛙的形态</p>
 						<h5>已知bug:</h5>
 						<p>1.输入内容后回车会刷新</p>
 					</div>
