--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 				</div>
 				<div id="collapseOne" class="panel-collapse collapse in">
 					<div class="panel-body">
-						提问必须是问句
-						提问以“吗”结尾
-						提问中允许出现“什么”疑问词
-						彩蛋除外，彩蛋识别等级高于问句识别等级
+						提问必须是问句<br>
+						提问以“吗”结尾<br>
+						提问中允许出现“什么”疑问词<br>
+						彩蛋除外，彩蛋识别等级高于问句识别等级<br>
 					</div>
 				</div>
 			</div>
