--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<h1 id="title1">狗蛙世界</h1>
 			<p id="designer">dinghx制作该网站</p>
 			<h2>皮皮生日快乐</h2>
-			<a id="visitgithub" href="https://github.com/CodingDing123/gouwa.github.io/tree/master">访问GitHub页</a>
+			<a id="visitgithub" href="https://github.com/CodingDing123/gouwa.github.io">访问GitHub页</a>
 			<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#notice">
 				公告
 			</button>
@@ -112,9 +112,9 @@
 		
 		<div id="trytoask">
 			<h2>试着问问:</h2>
+			<p>皮皮</p>
 			<p>狗蛙你喜欢吃什么？</p>
 			<p>狗蛙今天天气怎么样？</p>
-			<p>皮皮</p>
 		</div>
 
 		<!-- 公告模态框 -->
