--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				document.getElementById("firstgw").src = "./gw/girl.png";
 			} else if (x.value == '皮皮') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-success">祝皮皮生日快乐！</div>';
-				document.getElementById("firstgw").src = "./gw/happy.png";
+				document.getElementById("firstgw").src = "./gw/IMG_3848.PNG";
 			} else if (x.value == 'dhx and zyd' || x.value == 'zyd and dhx') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-danger">你在想什么？？？</div>';
 				document.getElementById("firstgw").src = "./gw/angry.png";
