--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				document.getElementById("firstgw").src = "./gw/girl.png";
 			} else if (x.value == '皮皮') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-success">祝皮皮生日快乐！</div>';
-				document.getElementById("firstgw").src = "./gw/IMG_3848.PNG";
+				document.getElementById("firstgw").src = "./gw/happy.png";
 			} else if (x.value == 'dhx and zyd' || x.value == 'zyd and dhx') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-danger">你在想什么？？？</div>';
 				document.getElementById("firstgw").src = "./gw/angry.png";
@@ -141,6 +141,7 @@
 						<p>5.增加“历史更新记录”页面</p>
 						<h5>已知bug:</h5>
 						<p>1.输入内容后回车会刷新</p>
+						<p>2.手机端浏览器访问页面布局错乱</p>
 					</div>
 
 					<!-- 模态框底部 -->
