--- a/history.html
+++ b/history.html
@@ -25,5 +25,13 @@
 		<p>3.增加“试着问问”，引导用户正确提问</p>
 		<p>4.优化网站中文字表述</p>
 		<p>5.增加“历史更新记录”页面</p>
+		<h5>3.12特别更新</h5>
+		<p>皮皮生日快乐！</p>
+		<h5>3.12新增功能:</h5>
+		<p>1.“问问狗蛙”AI功能优化</p>
+		<p>2.重构且优化网站视图，使其更新至bootstrap5</p>
+		<p>3.增加“试着问问”，引导用户正确提问</p>
+		<p>4.优化网站中文字表述</p>
+		<p>5.增加“历史更新记录”页面</p>
 	</body>
 </html>
