--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 			</button>
 			<br>
 			<a href="history.html">历史更新记录</a>
+			<input name="switch" type="checkbox" checked>
 		</div>
 		<br>
 		<div id="bread">
