--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 		}
 
 		function getcontent() {
-			if (isSleep) {
-				document.getElementById("answerplace").innerHTML = '<div class="alert alert-info">狗蛙在睡觉zzz</div>';
-			} else if (x.value == '叫醒狗蛙') {
+			if (x.value == '叫醒狗蛙') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-info">狗蛙醒来啦</div>';
 				isSleep = false;
-			} else if (x.value == 'zcz and lcx' || x.value == 'lcx and zcz') {
+			} else if (isSleep) {
+				document.getElementById("answerplace").innerHTML = '<div class="alert alert-info">狗蛙在睡觉zzz</div>';
+			}  else if (x.value == 'zcz and lcx' || x.value == 'lcx and zcz') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-success">新婚快乐！！！</div>';
 				document.getElementById("firstgw").src = "./gw/girl.png";
 			} else if (x.value == '皮皮') {
