--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 		</div>
 		<br>
 		<div id="bread">
-			<img id="bread" src="./gw/bread.png" alt="面包吃完了。。。" onclick="eatbread()">
+			<img id="bread" src="./gw/bread.png" width=100% alt="面包吃完了。。。" onclick="eatbread()">
 		</div>
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#whatisbread">
 			面包有什么用？
 		</button>
 		<br>
 		<div id="gouwa">
-			<img id="firstgw" src="./gw/original.png" alt="狗蛙走丢了。。。" onclick="addtimes()">
+			<img id="firstgw" src="./gw/original.png" width=100% alt="狗蛙走丢了。。。" onclick="addtimes()">
 		</div>
 		<br>
 		<h3>摸摸它</h3>
