--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-info">' + text + '</div>';
 			}
 		}
-		alert("生日快乐皮皮！");
 	</script>
 
 	<body>
 		<div id="welcome">
 			<h1 id="title1">狗蛙世界</h1>
 			<p id="designer">dhx制作该网站</p>
-			<h2>皮皮生日快乐</h2>
+			<h2>情人节没发布更新真是抱歉呢:-(</h2>
 			<a id="visitgithub" href="https://github.com/CodingDing123/gouwa.github.io">访问GitHub页</a>
 			<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#notice">
 				公告
@@ -87,14 +86,14 @@
 		</div>
 		<br>
 		<div id="bread">
-			<img id="bread" src="./gw/bread.png" width=100% alt="面包吃完了。。。" onclick="eatbread()">
+			<img id="bread" src="./gw/bread.png" width=50% alt="面包吃完了。。。" onclick="eatbread()">
 		</div>
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#whatisbread">
 			面包有什么用？
 		</button>
 		<br>
 		<div id="gouwa">
-			<img id="firstgw" src="./gw/original.png" width=100% alt="狗蛙走丢了。。。" onclick="addtimes()">
+			<img id="firstgw" src="./gw/original.png" width=70% alt="狗蛙走丢了。。。" onclick="addtimes()">
 		</div>
 		<br>
 		<h3>摸摸它</h3>
@@ -156,6 +155,7 @@
 					<div class="modal-body">
 						<h5>3.13新增功能:</h5>
 						<p>1.狗蛙会睡觉了</p>
+						<p>2.狗蛙可以令其手动入睡</p>
 						<h5>3.13修复bug:</h5>
 						<p>1.手机端浏览器访问页面布局错乱,初步实现响应式网页</p>
 						<h5>已知bug:</h5>
