--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-success">新婚快乐！！！</div>';
 				document.getElementById("firstgw").src = "./gw/girl.png";
 			} else if (x.value == '皮皮') {
-				document.getElementById("answerplace").innerHTML = '<div class="alert alert-success">祝皮皮生日快乐！</div>';
+				document.getElementById("answerplace").innerHTML = '<div class="alert alert-success">皮皮生日过了但我不想删掉这个功能</div>';
 				document.getElementById("firstgw").src = "./gw/happy.png";
 			} else if (x.value == 'dhx and zyd' || x.value == 'zyd and dhx') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-danger">你在想什么？？？</div>';
@@ -82,7 +82,7 @@
 			</button>
 			<br>
 			<a href="history.html">历史更新记录</a>
-			<input name="switch" type="checkbox" checked>
+			<a href="chatroom.html">狗蛙聊天室</a>
 		</div>
 		<br>
 		<div id="bread">
@@ -153,6 +153,7 @@
 
 					<!-- 模态框内容 -->
 					<div class="modal-body">
+						<h5>狗蛙聊天室预计在一周内开发完毕<h5>
 						<h5>3.13新增功能:</h5>
 						<p>1.狗蛙会睡觉了</p>
 						<p>2.狗蛙可以令其手动入睡</p>
