--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 			} else if (x.value == 'dhx and zyd' || x.value == 'zyd and dhx') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-danger">你在想什么？？？</div>';
 				document.getElementById("firstgw").src = "./gw/angry.png";
+			} else if (x.value == 'lyz and zax') {
+				document.getElementById("answerplace").innerHTML = '<div class="alert alert-success">咳咳</div>';
+				document.getElementById("firstgw").src = "./gw/girl.png";
 			} else if (x.value == '') {
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-warning">你说什么？</div>';
 			} else {
@@ -154,11 +157,7 @@
 					<!-- 模态框内容 -->
 					<div class="modal-body">
 						<h5>狗蛙聊天室预计在一周内开发完毕<h5>
-						<h5>3.13新增功能:</h5>
-						<p>1.狗蛙会睡觉了</p>
-						<p>2.狗蛙可以令其手动入睡</p>
-						<h5>3.13修复bug:</h5>
-						<p>1.手机端浏览器访问页面布局错乱,初步实现响应式网页</p>
+						<h5>信息课上闲着无聊的更新</h5>
 						<h5>已知bug:</h5>
 						<p>1.输入内容后回车会刷新</p>
 					</div>
