--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 			content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
+		<link rel="stylesheet" href="https://cdn.staticfile.org/foundation/5.5.3/css/foundation.min.css">
+  		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+  		<script src="https://cdn.staticfile.org/foundation/5.5.3/js/foundation.min.js"></script>
+  		<script src="https://cdn.staticfile.org/foundation/5.5.3/js/vendor/modernizr.js"></script>
 		<link rel="stylesheet" type="text/css" href="indexpage.css">
 		<title>狗蛙世界</title>
 	</head>
@@ -86,6 +90,11 @@
 			<br>
 			<a href="history.html">历史更新记录</a>
 			<a href="chatroom.html">狗蛙聊天室</a>
+			<br>
+			<div class="switch round">
+    				<input id="mySwitch3" type="checkbox">
+    				<label for="mySwitch3"></label>
+  			</div> 
 		</div>
 		<br>
 		<div id="bread">
