--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<div id="welcome">
 			<h1 id="title1">狗蛙世界</h1>
 			<p id="designer">dhx制作该网站</p>
-			<h2>情人节没发布更新真是抱歉呢:-(</h2>
+			<h2>沙城等你</h2>
 			<a id="visitgithub" href="https://github.com/CodingDing123/gouwa.github.io">访问GitHub页</a>
 			<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#notice">
 				公告
