--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-warning">你说什么？</div>';
 			} else {
 				text = x.value;
-				text = text.replace("？", "。").replace("吗", "").replace("你", "我")..replace("干什么","攻沙").replace("什么", "好吃的").replace("怎么样", "很好")
+				text = text.replace("？", "。").replace("吗", "").replace("你", "我").replace("干什么","攻沙").replace("什么", "好吃的").replace("怎么样", "很好")
 					.replace("我", "你");
 				document.getElementById("answerplace").innerHTML = '<div class="alert alert-info">' + text + '</div>';
 			}
